# ResearchOps-Agent

./: .dockerignore  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  gcp-setup.sh  pyproject.toml
.github/workflows/: deploy.yml
configs/: logging.yaml  metrics.yaml
configs/prompts/: default.yaml
src/: __init__.py  main.py
src/agents/collector/: __init__.py  collector_agent.py  document_normalizer.py  duplicate_filter.py  tool_router.py
src/agents/planner/: __init__.py  planner_agent.py
src/agents/prompts/: __init__.py  templates.py
src/agents/reporter/: __init__.py  reporter_agent.py
src/agents/synthesizer/: __init__.py  synthesizer_agent.py
src/api/: dependencies.py
src/api/routers/: health.py  notes.py  research.py
src/api/schemas/: request.py  response.py
src/application/dto/: agent_io.py
src/application/orchestrators/: __init__.py  research_orchestrator.py
src/application/services/: note_service.py  research_workflow_service.py
src/domain/errors/: exceptions.py
src/domain/models/: embedded_document.py  evidence_chunk.py  normalized_document.py  research_brief.py  research_job.py  research_plan.py  search_result.py  (+1 more)
src/observability/: __init__.py
src/rag/: __init__.py
src/tools/: __init__.py
tests/contract/: test_tool_contract.py
tests/integration/: test_api.py
tests/unit/: test_collector_agent.py  test_document_processor.py  test_langchain_client.py  test_orchestrator.py  test_planner_agent.py  test_rag_ingestion_pipeline.py  test_rag_retrieval.py  test_reporter_agent.py  test_synthesizer_agent.py  test_workflow.py
(+51 files in other folders)
