[project]
name = "researchops-agent"
version = "0.1.0"
description = "Agentic AI Research Workflow service"
readme = "PROJECT_OVERVIEW.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.28.0",
  "ddgs>=9.0.0",
  "sentence-transformers>=3.0.0",
  "python-dotenv>=1.0.0",
  "python-json-logger>=3.0.0",
  "google-cloud-monitoring>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
